force-app/main/default/objects/RDCleaningPrice__c/RDCleaningPrice__c.object-meta.xml
<CustomObject>
    <label>RD CleaningPrice</label>
    <nameField>
        <label>RDCleaningPrice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDCleaningPrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>