force-app/main/default/objects/RDCleaningPrice__c/fields/Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Cleaning__c</fullName>
    <label>Cleaning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>