force-app/main/default/objects/RDCleaningPrice__c/fields/PriceEach__c.field-meta.xml
<CustomField>
    <fullName>PriceEach__c</fullName>
    <label>PriceEach</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>