force-app/main/default/objects/RDCleaningPrice__c/fields/SizeLL__c.field-meta.xml
<CustomField>
    <fullName>SizeLL__c</fullName>
    <label>SizeLL</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>