force-app/main/default/objects/RDCleaningPrice__c/fields/SizeUL__c.field-meta.xml
<CustomField>
    <fullName>SizeUL__c</fullName>
    <label>SizeUL</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>