force-app/main/default/objects/RDCleaningPrice__c/fields/SizeValueLL__c.field-meta.xml
<CustomField>
    <fullName>SizeValueLL__c</fullName>
    <label>SizeValueLL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>