force-app/main/default/objects/RDCleaningPrice__c/fields/SizeValueUL__c.field-meta.xml
<CustomField>
    <fullName>SizeValueUL__c</fullName>
    <label>SizeValueUL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>