force-app/main/default/objects/RDCleaningPrice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cleaning__c</columns>
    <columns>Prod__c</columns>
    <columns>SizeLL__c</columns>
    <columns>SizeUL__c</columns>
    <columns>SizeValueLL__c</columns>
    <columns>SizeValueUL__c</columns>
    <columns>QtyLL__c</columns>
    <columns>QtyUL__c</columns>
    <columns>PriceEach__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>